try out agent in example